metadata/force-app/main/default/objects/CustomName_JkTWg__c/CustomName_JkTWg__c.object-meta.xml
<CustomObject>
    <description>Description_CEclp</description>
    <label>CustomLabel_wunBK</label>
    <nameField>
        <label>CustomLabel_wunBK</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_wunBKs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>