metadata/force-app/main/default/objects/CustomName_JkTWg__c/fields/CustomField_LqkNK__c.field-meta.xml
<CustomField>
    <fullName>CustomField_LqkNK__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldasCUH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>