metadata/force-app/main/default/objects/CustomName_JkTWg__c/fields/CustomField_szWIZ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_szWIZ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldKbCRX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>