metadata/force-app/main/default/objects/CustomName_JkTWg__c/fields/CustomField_VyBBY__c.field-meta.xml
<CustomField>
    <fullName>CustomField_VyBBY__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldcvaUd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>